//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  emailVerified Boolean [not null]
  image String
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
  sessions session [not null]
  accounts account [not null]
  dogs Dog [not null]
  caretakerOf Dog [not null]
}

Table session {
  id String [pk]
  expiresAt DateTime [not null]
  token String [unique, not null]
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
  ipAddress String
  userAgent String
  userId String [not null]
  user user [not null]
}

Table account {
  id String [pk]
  accountId String [not null]
  providerId String [not null]
  userId String [not null]
  user user [not null]
  accessToken String
  refreshToken String
  idToken String
  accessTokenExpiresAt DateTime
  refreshTokenExpiresAt DateTime
  scope String
  password String
  createdAt DateTime [not null]
  updatedAt DateTime [not null]
}

Table verification {
  id String [pk]
  identifier String [not null]
  value String [not null]
  expiresAt DateTime [not null]
  createdAt DateTime
  updatedAt DateTime
}

Table Dog {
  id String [pk]
  owner user [not null]
  ownerId String [not null]
  caretakers user [not null]
  imageUrl String [not null]
  name String [not null]
  birthDate DateTime [not null]
  size ESize [not null]
  favouriteActivity String
  gender EGender [not null]
  neutered Boolean [not null]
  joinedEvents JoinedEvent [not null]

  Note: '*
 * ***************************************************************************
 * ** Dogs
 * ***************************************************************************'
}

Table Event {
  id String [pk]
  comment String [not null]
  startAt DateTime [not null]
  duration EDuration [not null]
  joined JoinedEvent [not null]
  locationId String [not null]
  location Location [not null]

  Note: '*
 * ***************************************************************************
 * ** Events
 * ***************************************************************************'
}

Table JoinedEvent {
  id String [pk]
  dogId String [not null]
  dog Dog [not null]
  createdAt DateTime [default: `now()`, not null]
  event Event [not null]
  eventId String [not null]
}

Table Location {
  id String [pk]
  latitude Float [not null]
  longitude Float [not null]
  events Event [not null]
}

Table DogToUser {
  caretakerofId String [ref: > Dog.id]
  caretakersId String [ref: > user.id]
}

Enum EGender {
  MALE
  FEMALE
}

Enum ESize {
  SMALL
  MEDIUM
  LARGE
}

Enum EDuration {
  FIVE_TO_FIFTEEN_MINUTES
  FIFTEEN_TO_THIRTY_MINUTES
  THIRTY_TO_SIXTY_MINUTES
  SIXTY_MINUTES_OR_LONGER
}

Ref: session.userId > user.id [delete: Cascade]

Ref: account.userId > user.id [delete: Cascade]

Ref: Dog.ownerId > user.id

Ref: Event.locationId > Location.id [delete: Cascade]

Ref: JoinedEvent.dogId > Dog.id

Ref: JoinedEvent.eventId > Event.id